Fix plugin scrollbar

--- a/ui-src/main.css
+++ b/ui-src/main.css
@@ -1,3 +1,3 @@
-body :not:has(.wrapper-overflow) {
-  overflow-y: hidden;
+body:has(div[data-overflowing='true']) {
+  overflow-y: visible !important;
 }
